--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li>Mymensingh</li>
         <li>Rajshahi</li>
     </ol>
-    <h3>Mymensingh Division, Bangladesh</h3>
+    <h3>Mymensingh, Bangladesh</h3>
     <p><img src="flag.jpg" alt=""></p>
     <ul>
         <li>Jamalpur Sador</li>
